[package]
name = "pi_blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-macroquad = { version = "0.15.0", default_features = false }
macroquad = { version = "0.3.25", default_features = false }
rodio = "0.17.1"
